Finalizada as funcoes de validacao

--- a/index.html
+++ b/index.html
@@ -67,16 +67,16 @@
                 <form>
                     <div class="row justify-content-center">
                         <div class="col-md-3">
-                            <label for="otimista-bom" class="mb-0">Bom</label>
-                            <input type="number" class="form-control" name="otimista-bom" id="otimista-bom" min="1" max="100">
+                            <label for="optimistic-good" class="mb-0">Bom</label>
+                            <input type="number" class="form-control" name="optimistic-good" id="optimistic-good" min="1" max="100">
                         </div>
                         <div class="col-md-3">
-                            <label for="otimista-regular" class="mb-0">Regular</label>
-                            <input type="number" class="form-control" name="otimista-regular" id="otimista-regular" min="1" max="100">
+                            <label for="optimistic-regular" class="mb-0">Regular</label>
+                            <input type="number" class="form-control" name="optimistic-regular" id="optimistic-regular" min="1" max="100">
                         </div>
                         <div class="col-md-3">
-                            <label for="otimista-fraco" class="mb-0">Fraco</label>
-                            <input type="number" class="form-control" name="otimista-fraco" id="otimista-fraco" min="1" max="100">
+                            <label for="optimistic-weak" class="mb-0">Fraco</label>
+                            <input type="number" class="form-control" name="optimistic-weak" id="optimistic-weak" min="1" max="100">
                         </div>
                     </div>
                 </form>
@@ -88,16 +88,16 @@
                 <form>
                     <div class="row justify-content-center">
                         <div class="col-md-3">
-                            <label for="neutro-bom" class="mb-0">Bom</label>
-                            <input type="number" class="form-control" name="neutro-bom" id="neutro-bom" min="1" max="100">
+                            <label for="neutral-good" class="mb-0">Bom</label>
+                            <input type="number" class="form-control" name="neutral-good" id="neutral-good" min="1" max="100">
                         </div>
                         <div class="col-md-3">
-                            <label for="neutro-regular" class="mb-0">Regular</label>
-                            <input type="number" class="form-control" name="neutro-regular" id="neutro-regular" min="1" max="100">
+                            <label for="neutral-regular" class="mb-0">Regular</label>
+                            <input type="number" class="form-control" name="neutral-regular" id="neutral-regular" min="1" max="100">
                         </div>
                         <div class="col-md-3">
-                            <label for="neutro-fraco" class="mb-0">Fraco</label>
-                            <input type="number" class="form-control" name="neutro-fraco" id="neutro-fraco" min="1" max="100">
+                            <label for="neutral-weak" class="mb-0">Fraco</label>
+                            <input type="number" class="form-control" name="neutral-weak" id="neutral-weak" min="1" max="100">
                         </div>
                     </div>
                 </form>
@@ -108,16 +108,16 @@
                 <form>
                     <div class="row justify-content-center">
                         <div class="col-md-3">
-                            <label for="pessimista-bom" class="mb-0">Bom</label>
-                            <input type="number" name="pessimista-bom" id="pessimista-bom" class="form-control" min="1" max="100">
+                            <label for="pessimistic-good" class="mb-0">Bom</label>
+                            <input type="number" name="pessimistic-good" id="pessimistic-good" class="form-control" min="1" max="100">
                         </div>
                         <div class="col-md-3">
-                            <label for="pessimista-regular" class="mb-0">Regular</label>
-                            <input type="number" name="pessimista-regular" id="pessimista-regular" class="form-control" min="1" max="100">
+                            <label for="pessimistic-regular" class="mb-0">Regular</label>
+                            <input type="number" name="pessimistic-regular" id="pessimistic-regular" class="form-control" min="1" max="100">
                         </div>
                         <div class="col-md-3">
-                            <label for="pessimista-fraco" class="mb-0">Fraco</label>
-                            <input type="number" name="pessimista-fraco" id="pessimista-fraco" class="form-control" min="1" max="100">
+                            <label for="pessimistic-weak" class="mb-0">Fraco</label>
+                            <input type="number" name="pessimistic-weak" id="pessimistic-weak" class="form-control" min="1" max="100">
                         </div>
                     </div>
                 </form>
@@ -185,6 +185,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
+        <script src="./js/functions.js"></script>
         <script src="./js/app.js"></script>
 </body>
 
