--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         <script src="./libs/bootstrap/popper.min.js"></script>
         <script src="./libs/bootstrap/bootstrap.min.js"></script>
         <script src="./libs/jquery-confirm/jquery-confirm.min.js"></script>
-        <script src="./tests/automatizate.js"></script>
+        <script src="./tests/automated.js"></script>
         <script src="./js/functions.js"></script>
         <script src="./js/app.js"></script>
 </body>
