--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </p>
 
                 <button id="home-calculate-risc" class="btn btn-primary">Calcular Risco </button>
-                <button id="home-how-works" class="btn btn-primary">Como Funciona</button>
+                <a href="documentacao.pdf" target="_blank" id="home-how-works" class="btn btn-primary">Como Funciona</a>
             </div>
         </div>
     </div>
